--- a/demo/src/main/res/layout/fragment_transfer.xml
+++ b/demo/src/main/res/layout/fragment_transfer.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/tv_state"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:gravity="center"
         android:background="#dfdfdfdf"
         android:padding="@dimen/padding_edge_half"
@@ -19,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:text="characteristic:xxxxxxxxxxxxxxxxxxxxxxxx\nnotify:xxxxxxxxxxxxxxx"
-        android:textSize="15sp"/>
+        android:textSize="13sp"/>
     <TextView
         android:id="@+id/tv_console"
         android:layout_width="match_parent"
@@ -29,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_state"
         android:background="#f0f0f0f0"
         android:gravity="center"
+        android:scrollbars="vertical"
         android:textSize="13sp"
         android:text="abcdefg\nabceefg\nabcdefg"/>
     <EditText
@@ -40,6 +41,7 @@
         android:background="#f5f5f5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:hint="字节输入"
         app:layout_constraintTop_toBottomOf="@+id/tv_console"
         android:textSize="16sp"
         android:text="ff 00 aa cc bb"/>
