--- a/demo/src/main/res/layout/fragment_ble_gatt.xml
+++ b/demo/src/main/res/layout/fragment_ble_gatt.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context=".GattFragment">
+    tools:context=".bluetooth.BleGattFragment">
 
     <ProgressBar
         android:id="@+id/progress_bar"
