--- a/demo/src/main/res/layout/fragment_ble_transfer.xml
+++ b/demo/src/main/res/layout/fragment_ble_transfer.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
-    tools:context=".TransferFragment">
+    tools:context=".bluetooth.BleTransferFragment">
 
     <TextView
         android:id="@+id/tv_state"
